force-app/main/default/objects/School__c/School__c.object-meta.xml
<CustomObject>
    <description>Public Schools that are attached to a district</description>
    <label>School</label>
    <nameField>
        <label>School Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Schools</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>