force-app/main/default/objects/School__c/fields/Agency_Type__c.field-meta.xml
<CustomField>
    <fullName>Agency_Type__c</fullName>
    <label>Agency Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>