force-app/main/default/objects/School__c/fields/DistrictId__c.field-meta.xml
<CustomField>
    <fullName>DistrictId__c</fullName>
    <externalId>true</externalId>
    <label>DistrictId</label>
    <length>200</length>
    <type>Text</type>
</CustomField>