force-app/main/default/objects/School__c/fields/Full_Time_Teachers__c.field-meta.xml
<CustomField>
    <fullName>Full_Time_Teachers__c</fullName>
    <label>Full Time Teachers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>