force-app/main/default/objects/School__c/fields/latitude__c.field-meta.xml
<CustomField>
    <fullName>latitude__c</fullName>
    <label>latitude</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>