force-app/main/default/objects/School__c/fields/NCES_District_Id__c.field-meta.xml
<CustomField>
    <fullName>NCES_District_Id__c</fullName>
    <description>NCES District Id</description>
    <formula>Account__r.SchoolId__c</formula>
    <label>NCES District Id</label>
    <type>Text</type>
</CustomField>