force-app/main/default/objects/School__c/fields/NCES_School_ID__c.field-meta.xml
<CustomField>
    <fullName>NCES_School_ID__c</fullName>
    <externalId>true</externalId>
    <label>NCES School ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>