force-app/main/default/objects/School__c/fields/Students__c.field-meta.xml
<CustomField>
    <fullName>Students__c</fullName>
    <label>Students</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>